streamlit.log
nohup: ignoring input

Collecting usage statistics. To deactivate, set browser.gatherUsageStats to false.


  You can now view your Streamlit app in your browser.

  URL: http://127.0.0.1:8501

2026-01-28 07:31:56.308 Script compilation error
Traceback (most recent call last):
  File "/home/marliana/miniconda3/envs/app/lib/python3.10/site-packages/streamlit/runtime/scriptrunner/script_runner.py", line 573, in _run_script
    code = self._script_cache.get_bytecode(script_path)
  File "/home/marliana/miniconda3/envs/app/lib/python3.10/site-packages/streamlit/runtime/scriptrunner/script_cache.py", line 72, in get_bytecode
    filebody = magic.add_magic(filebody, script_path)
  File "/home/marliana/miniconda3/envs/app/lib/python3.10/site-packages/streamlit/runtime/scriptrunner/magic.py", line 45, in add_magic
    tree = ast.parse(code, script_path, "exec")
  File "/home/marliana/miniconda3/envs/app/lib/python3.10/ast.py", line 50, in parse
    return compile(source, filename, mode, flags,
  File "/home/marliana/shared_folder/CarbonApp/app.py", line 213
    <<<<<<< HEAD
    ^^
SyntaxError: invalid syntax
2026-01-28 07:31:56.310 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.
